# gotify-dbus-rust

./: Cargo.toml  LICENSE  README.md
src/: gotify_receiver.rs  lib.rs  main.rs  registration.rs  server.rs
