[package]
name = "dbus_distributor"
version = "0.1.0"
authors = ["vurpo <vurpo@vurpo.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "2.0.0-beta.2"
zvariant = ""
lazy_static = "1.4.0"
tide = "0.16.0"
tokio = { version = "1.2.0", features = ["rt-multi-thread"] }