[package]
name = "unifiedpush_gotify"
version = "0.1.0"
authors = ["vurpo <vurpo@vurpo.fi>"]
edition = "2018"

[lib]
name = "unifiedpush_gotify_lib"
path = "src/lib.rs"

[[bin]]
name = "unifiedpush_gotify"
path = "src/main.rs"

[dependencies]
zbus = "2.0.0-beta.2"
zvariant = "*"
lazy_static = "1.4.0"
directories-next = "2.0.0"
rpassword = "5.0"
clap = "3.0.0-beta.2"
reqwest = { version = "0.11.1", features = ["json", "blocking", "rustls-tls"], default-features = false  }
serde = "1.0.123"
serde_json = "1.0.59"
url = "*"
r2d2_sqlite = "0.17.0"
r2d2 = "0.8.9"
futures-util = "*"
tokio = { version = "1.2.0", features = ["full"] }
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"]}